<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddSuscriptionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="@dimen/common_padding_default">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                app:helperText="@string/helper_required"
                app:endIconMode="clear_text"
                app:counterMaxLength="@integer/counter_max_name"
                app:counterEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="@integer/counter_max_name"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNumPers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_numPerson"
                app:helperText="@string/helper_required"
                app:endIconMode="clear_text"
                android:layout_marginTop="@dimen/margin_normal"
                app:counterMaxLength="@integer/counter_max_num"
                app:counterEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNumPers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:maxLength="@integer/counter_max_num"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Date"
                app:helperText="@string/helper_required"
                app:endIconMode="clear_text"
                android:layout_marginTop="@dimen/margin_normal"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Cost"
                app:helperText="@string/helper_required"
                app:endIconMode="clear_text"
                android:layout_marginTop="@dimen/margin_normal"
                app:counterMaxLength="@integer/counter_max_cost"
                app:counterEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:maxLength="@integer/counter_max_cost"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/common_padding_default"
                android:gravity="center_vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilImaUrl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_phone_url"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_link"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etImaUrl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:maxLines="@integer/lines_url_photo"
                        android:minLines="@integer/lines_url_photo"
                        android:textAppearance="?attr/textAppearanceCaption"
                        android:textColor="@color/color_link"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imgPhoto"
                    android:layout_width="@dimen/photo_size_thump"
                    android:layout_height="@dimen/photo_size_thump"
                    android:src="@drawable/ic_image"
                    android:layout_marginStart="@dimen/common_padding_default"
                    android:contentDescription="@string/description_img_photo"/>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCreate"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_max"
                android:text="@string/create_suscription"
                android:textSize="@dimen/btnTextLogin"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/cancel"

                app:layout_constraintEnd_toEndOf="@id/btnLogin"
                app:layout_constraintStart_toStartOf="@id/btnLogin"
                app:layout_constraintTop_toBottomOf="@id/btnLogin"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>